fixed overflow on non-firefox browsers

--- a/neocities/shrines/homestuck/sollux/style.css
+++ b/neocities/shrines/homestuck/sollux/style.css
@@ -32,6 +32,7 @@ body.customCursor {
 html, body {
 	margin: 0;
 	height: 100%;
+	overflow-x: hidden;
 }
 
 body {
